vlib/v/checker/tests/array_declare_element_b.out
vlib/v/checker/tests/array_declare_element_b.v:3:9: error: single array element cannot be declared 
    1 | fn main() {
    2 |     arr := [1, 2]
    3 |     arr[1] := 1
      |            ~~
    4 | }
